# ai_data_analyst

./: ASYNCIO_FIX.md  CREWAI_ARCHITECTURE.md  CREWAI_TRANSFORMATION_SUMMARY.md  CREWBASE_FIX.md  CREW_INIT_DEBUG.md  ENTERPRISE_README.md  ENVIRONMENT_SOLUTION.md  ERROR_HANDLING_GUIDE.md  FINAL_FIX.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FOUND_THE_ISSUE.md  IMPORT_FIXES_SUMMARY.md  INDEX.md  INSTALLATION.md  MIGRATION_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_FIX_IMPORTS.md  README.md  README_COMPLETE.md  START_HERE.md  TROUBLESHOOT_STEPS.md  WHAT_TO_DO_NEXT.md  app.py  app_enterprise.py  check_env.py  check_imports.py  fix_env.py  install_and_verify.py  install_dependencies.py  pyproject.toml  requirements.py  requirements.txt  run_clean.py  run_enterprise.py  run_with_env.py  sample_commands.md  test_crew_init.py  test_enterprise.py  (+7 more)
src/ai_data_analyst/: __init__.py  crew.py  crew_enterprise.py  crew_simple.py  crew_streamlit_integration.py  crew_tools.py  main.py  main_enterprise.py
src/ai_data_analyst/agents/: __init__.py  advanced_analytics_agent.py  analytics_agent.py  cleaning_agent.py  dashboard_agent.py  enhanced_planner_agent.py  formatting_agent.py  planner_agent.py  visualization_agent.py
src/ai_data_analyst/config/: agents_enterprise.yaml  tasks_enterprise.yaml
src/ai_data_analyst/core/: __init__.py  callbacks.py  crew_manager.py
src/ai_data_analyst/models/: __init__.py  schemas.py  state.py
src/ai_data_analyst/tools/: __init__.py  advanced_excel_tools.py  advanced_operations.py  chart_tools.py  data_cleaner.py  excel_tools.py  (+1 more)
(+4 files in other folders)
