[project]
name = "ai_data_analyst"
version = "0.1.0"
description = "ai-data-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
ai_data_analyst = "ai_data_analyst.main:run"
run_crew = "ai_data_analyst.main:run"
train = "ai_data_analyst.main:train"
replay = "ai_data_analyst.main:replay"
test = "ai_data_analyst.main:test"
run_with_trigger = "ai_data_analyst.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
